<resources>
    <string name="app_name">Calculator</string>
    <string name="todo">TODO</string>
    <string name="ac">AC</string>
    <string name="txt_delete">DEL</string>
    <string name="txt_percent">%</string>
    <string name="txt_division">÷</string>
    <string name="txt_multiply">×</string>
    <string name="txt_minus">-</string>
    <string name="txt_plus">+</string>
    <string name="txt_equal">=</string>
    <string name="txt_1">1</string>
    <string name="txt_4">4</string>
    <string name="txt_7">7</string>
    <string name="txt_dots">.</string>
    <string name="txt_2">2</string>
    <string name="txt_5">5</string>
    <string name="txt_8">8</string>
    <string name="txt_0">0</string>
    <string name="txt_3">3</string>
    <string name="txt_6">6</string>
    <string name="txt_9">9</string>
    <string name="txt_00">00</string>
    <string name="error_input_number">\"ERROR INPUT NUMBER\"</string>
</resources>